Refine mcpuk browser layout for easier theming

--- a/manager/media/browser/mcpuk/frmcreatefolder.html
+++ b/manager/media/browser/mcpuk/frmcreatefolder.html
@@ -77,12 +77,13 @@
         }
     </script>
 </head>
-<body bottomMargin="0" topMargin="0">
-<table height="100%" cellSpacing="0" cellPadding="0" width="100%" border="0">
+<body class="browser-body">
+<table class="browser-panel browser-panel--full-height" height="100%" cellSpacing="0" cellPadding="0" width="100%"
+       border="0">
     <tr>
         <td>
-            <button type="button" style="WIDTH: 100%" onclick="CreateFolder();">
-                <table cellSpacing="0" cellPadding="0" border="0">
+            <button class="browser-button browser-button--full-width" type="button" onclick="CreateFolder();">
+                <table class="browser-panel browser-panel--nested" cellSpacing="0" cellPadding="0" border="0">
                     <tr>
                         <td><img alt="" src="images/Folder.gif"></td>
                         <td>&nbsp;</td>
