--- a/manager/media/browser/mcpuk/frmactualfolder.html
+++ b/manager/media/browser/mcpuk/frmactualfolder.html
@@ -35,12 +35,14 @@
 
     </script>
 </head>
-<body bottomMargin="0" topMargin="0">
-<table height="100%" cellSpacing="0" cellPadding="0" width="100%" border="0">
+<body class="browser-body">
+<table class="browser-panel browser-panel--full-height" height="100%" cellSpacing="0" cellPadding="0" width="100%"
+       border="0">
     <tr>
         <td>
-            <button style="WIDTH: 100%" type="button">
-                <table cellSpacing="0" cellPadding="0" width="100%" border="0">
+            <button class="browser-button browser-button--full-width" type="button">
+                <table class="browser-panel browser-panel--nested" cellSpacing="0" cellPadding="0" width="100%"
+                       border="0">
                     <tr>
                         <td><img height="32" alt="" src="images/FolderOpened32.gif" width="32"></td>
                         <td>&nbsp;</td>
