--- a/manager/media/browser/mcpuk/frmresourceslist.html
+++ b/manager/media/browser/mcpuk/frmresourceslist.html
@@ -363,8 +363,9 @@
         }
     </script>
 </head>
-<body class="FileArea" bottomMargin="10" leftMargin="10" topMargin="10" rightMargin="10">
-<table id="tableFiles" cellSpacing="4" cellPadding="5" width="100%" border="0">
+<body class="browser-body FileArea">
+<table id="tableFiles" class="browser-panel browser-panel--resources" cellSpacing="4" cellPadding="5" width="100%"
+       border="0">
 </table>
 </body>
 </html>
