Move MCPUK table spacing to CSS

--- a/manager/media/browser/mcpuk/frmfolders.html
+++ b/manager/media/browser/mcpuk/frmfolders.html
@@ -168,8 +168,7 @@
     </script>
 </head>
 <body class="browser-body FileArea">
-<table id="tableFiles" class="browser-panel browser-panel--full-height" cellSpacing="0" cellPadding="0" width="100%"
-       border="0">
+<table id="tableFiles" class="browser-panel browser-panel--full-height">
     <tr id="trUp" style="DISPLAY: none">
         <td width="16"><a id="linkUpIcon" href="#"><img alt="" src="images/FolderUp.gif" width="16" height="16"
                                                         border="0"></a></td>
