--- a/manager/media/browser/mcpuk/frmresourceslist.html
+++ b/manager/media/browser/mcpuk/frmresourceslist.html
@@ -364,8 +364,7 @@
     </script>
 </head>
 <body class="browser-body FileArea">
-<table id="tableFiles" class="browser-panel browser-panel--resources" cellSpacing="4" cellPadding="5" width="100%"
-       border="0">
+<table id="tableFiles" class="browser-panel browser-panel--resources">
 </table>
 </body>
 </html>
