--- a/manager/media/browser/mcpuk/frmresourcetype.html
+++ b/manager/media/browser/mcpuk/frmresourcetype.html
@@ -53,8 +53,7 @@
 </head>
 
 <body class="browser-body">
-<table class="browser-panel browser-panel--full-height" height="100%" cellSpacing="0" cellPadding="0" width="100%"
-       border="0">
+<table class="browser-panel browser-panel--full-height">
     <tr>
         <td nowrap>
             <div class="browser-field-group">
