--- a/manager/media/browser/mcpuk/frmupload.html
+++ b/manager/media/browser/mcpuk/frmupload.html
@@ -207,14 +207,12 @@
 <body class="browser-body">
 <form id="frmUpload" class="browser-form" name="frmUpload" action="" target="frmUploadWorker" method="post"
       enctype="multipart/form-data" onsubmit="return OnSubmit();">
-    <table class="browser-panel browser-panel--full-height" height="100%" cellSpacing="0" cellPadding="0" width="100%"
-           border="0">
+    <table class="browser-panel browser-panel--full-height">
         <tr>
             <td nowrap>
                 <div class="browser-field-group">
                     <span id="eUploadMessage">Upload a new file in this folder</span><br/>
-                    <table class="browser-panel browser-panel--nested" cellSpacing="0" cellPadding="0" width="100%"
-                           border="0">
+                    <table class="browser-panel browser-panel--nested">
                         <tr>
                             <td width="100%">
                                 <div class="browser-field-group" id="filebox"><input id="NewFile" name="NewFile"
@@ -222,8 +220,7 @@
                                                                                         type="file">
                                 </div>
                                 <div class="browser-field-group" id="progressbox" style="display: none">
-                                    <table id="progress" class="browser-panel browser-panel--nested progress_bar"
-                                           style="width: 100%">
+                                    <table id="progress" class="browser-panel browser-panel--nested progress_bar">
                                         <tr>
                                             <td class="progress_hollow">&nbsp;</td>
                                             <td class="progress_hollow">&nbsp;</td>
