--- a/manager/media/browser/mcpuk/frmactualfolder.html
+++ b/manager/media/browser/mcpuk/frmactualfolder.html
@@ -36,13 +36,11 @@
     </script>
 </head>
 <body class="browser-body">
-<table class="browser-panel browser-panel--full-height" height="100%" cellSpacing="0" cellPadding="0" width="100%"
-       border="0">
+<table class="browser-panel browser-panel--full-height">
     <tr>
         <td>
             <button class="browser-button browser-button--full-width" type="button">
-                <table class="browser-panel browser-panel--nested" cellSpacing="0" cellPadding="0" width="100%"
-                       border="0">
+                <table class="browser-panel browser-panel--nested">
                     <tr>
                         <td><img height="32" alt="" src="images/FolderOpened32.gif" width="32"></td>
                         <td>&nbsp;</td>
