--- a/manager/media/browser/mcpuk/frmcreatefolder.html
+++ b/manager/media/browser/mcpuk/frmcreatefolder.html
@@ -78,12 +78,11 @@
     </script>
 </head>
 <body class="browser-body">
-<table class="browser-panel browser-panel--full-height" height="100%" cellSpacing="0" cellPadding="0" width="100%"
-       border="0">
+<table class="browser-panel browser-panel--full-height">
     <tr>
         <td>
             <button class="browser-button browser-button--full-width" type="button" onclick="CreateFolder();">
-                <table class="browser-panel browser-panel--nested" cellSpacing="0" cellPadding="0" border="0">
+                <table class="browser-panel browser-panel--nested">
                     <tr>
                         <td><img alt="" src="images/Folder.gif"></td>
                         <td>&nbsp;</td>
