--- a/manager/media/browser/mcpuk/frmfolders.html
+++ b/manager/media/browser/mcpuk/frmfolders.html
@@ -167,8 +167,9 @@
         }
     </script>
 </head>
-<body class="FileArea" bottomMargin="10" leftMargin="10" topMargin="10" rightMargin="10">
-<table id="tableFiles" cellSpacing="0" cellPadding="0" width="100%" border="0">
+<body class="mcpuk-browser FileArea BrowserBody BrowserBody--folders" bottomMargin="10" leftMargin="10" topMargin="10"
+      rightMargin="10">
+<table id="tableFiles" class="BrowserTable BrowserBodySection" cellSpacing="0" cellPadding="0" width="100%" border="0">
     <tr id="trUp" style="DISPLAY: none">
         <td width="16"><a id="linkUpIcon" href="#"><img alt="" src="images/FolderUp.gif" width="16" height="16"
                                                         border="0"></a></td>
